--- a/LuxrCars/Views/web.config
+++ b/LuxrCars/Views/web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="LuxrCars" />
-        
+        <add namespace="LuxrCars.Models"/>
         <add namespace="LuxrCars.Domain.Models"/>
         <add namespace="LuxrCars.Infrastructure"/>
       </namespaces>
